--- a/src/App.scss
+++ b/src/App.scss
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -38,5 +41,61 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: #3d3d3d;
+}
+
+.datePicker {
+  width: 100%;
+  height: 100%;
+  padding: none;
+  border-radius: 10px;
+  background-color: #3d3d3d;
+  box-shadow: none;
+
+  .day-label-bar-inner-rtl {
+    border-radius: 10px;
+    background-color: #83ff6472;
+  }
+
+  .panel-header-rtl {
+    background-color: #bdbdbd;
+
+    .panel-header-inner {
+      color: white !important;
+    }
+  }
+
+  .days-body,
+  .panel-footer-rtl {
+    background-color: #00000000;
+    border-radius: 10px;
+  }
+
+  .panel-footer-wrapper {
+    display: none;
+  }
+
+  .day-item-chain,
+  .day-item-outer,
+  .day {
+    color: white;
+    border-radius: 10px;
+
+    &:hover {
+      color: black;
+    }
+
+    &.highlight {
+      background-color: #83ff6472;
+
+      &:hover {
+        color: white;
+      }
+    }
+
+    &.disabled {
+      border-radius: 0px;
+      background-color: #a4a4a400;
+    }
+  }
 }
